test/core/errors/default_values_error/zs/wrong_string_initializer_error.zs
package wrong_string_initializer_error;

struct WrongStringInitializer
{
    string  wrongStringInitializer = true;
};
